test/parse/func/bad-local-binding.txt
;;; ERROR: 1
(module (func (local $foo $bar)))
(;; STDERR ;;;
out/test/parse/func/bad-local-binding.txt:2:27: syntax error, unexpected VAR, expecting VALUE_TYPE
(module (func (local $foo $bar)))
                          ^^^^
;;; STDERR ;;)
